[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "A library to read and validate a product configuration"
edition = "2018"
license = "Apache-2.0"
name = "product-config"
version = "0.1.0-nightly"

[dependencies]
java-properties = "1.3"
regex = "1.5"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.10"
