[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "A library to read and validate a product configuration"
edition = "2018"
license = "Apache-2.0"
name = "product-config"
repository = "https://github.com/stackabletech/product-config"
version = "0.4.0-nightly"

[dependencies]
java-properties = "1.3"
fancy-regex = "0.8"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
xml-rs = "0.8"

[dev-dependencies]
rstest = "0.11"
