[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "A library to read and validate a product configuration"
edition = "2021"
license = "Apache-2.0"
name = "product-config"
repository = "https://github.com/stackabletech/product-config"
version = "0.6.0"

[dependencies]
java-properties = "2.0"
fancy-regex = "0.11"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
xml-rs = "0.8"

[dev-dependencies]
rstest = "0.18"
